--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy Quartz site to GitHub Pages
 on:
   push:
     branches:
-      - v4
- 
+        - master
+
 permissions:
   contents: read
   pages: write
